# makesource

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 00_프로젝트_개요_및_실행계획.md  01_제로코스트_구축계획.md  02_PRD.md  03_기술설계서_TAD.md  04_UI_디자인_스펙.md  05_구현_백로그.md  06_결정기록.md  07_프리셋_프롬프트_연구.md  08_수동_QA_체크리스트.md  09_사용자_가이드.md  10_관리자_가이드.md  11_성능최적화_계획.md
packaging/homebrew/: localbrush.rb
python/: caption.py  essence.py  remove_bg.py  translate.py
src/: index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_perf_indices.sql
src-tauri/resources/: dict.ko-en.json  licenses.json  presets.default.json
src-tauri/resources/training/: profiles.toml
src-tauri/resources/workflows/: sdxl_base.json  sdxl_ipadapter.json  sdxl_lora.json
src-tauri/src/: error.rs  lib.rs  main.rs  paths.rs  perf.rs  settings.rs  storage.rs  styles.rs  thumbs.rs
src-tauri/src/bootstrap/: download.rs  kohya.rs  mod.rs  models.rs  state.rs
src-tauri/src/commands/: bootstrap.rs  engine.rs  essence.rs  export.rs  generate.rs  history.rs  mod.rs  presets.rs  settings.rs  styles.rs  training.rs  translate.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/engine/: client.rs  fallback.rs  generation.rs  mod.rs
src-tauri/src/prompt/: assemble.rs  mod.rs  presets.rs  translate.rs  workflow.rs
src-tauri/src/training/: mod.rs  parser.rs  profiles.rs  runner.rs
src/app/: App.tsx  BootstrapGate.tsx  Layout.tsx  navItems.test.ts  navItems.ts
src/components/: OnboardingTour.tsx  ScreenPlaceholder.tsx  SidebarNav.tsx  Toast.tsx
src/lib/: appError.test.ts  appError.ts  clipboard.ts  i18n.test.ts  i18n.ts  imagePath.test.ts  imagePath.ts  tauri.ts  tourGuide.test.ts  tourGuide.ts
src/screens/bootstrap/: BootstrapScreen.tsx  bootstrapView.test.ts  bootstrapView.ts
src/screens/gallery/: DetailModal.tsx  GalleryScreen.tsx  detailMeta.test.ts  detailMeta.ts  galleryPaging.test.ts  galleryPaging.ts
src/screens/generate/: GenerateScreen.tsx  ResultGrid.tsx  genSession.test.ts  genSession.ts  presetTypes.test.ts  presetTypes.ts  store.ts  translationPreview.test.ts  translationPreview.ts
src/screens/presets/: ABCompareModal.tsx  PresetsScreen.tsx  abCompare.test.ts  abCompare.ts  presetForm.test.ts  presetForm.ts
src/stores/: onboarding.ts  theme.ts
(+12 files in other folders)
